syntax = "proto3";

package us_states;

message StateProto {
  string name = 1;
  string post_abbr = 2;
}
